# harp.pico.cam-trigger

./: .gitmodules  README.md
examples/pyharp/: app_registers.py  toggle_pwm_output.py
firmware/: .gitignore  CMakeLists.txt
firmware/inc/: config.h  pwm.h
firmware/src/: main.cpp  pwm.cpp
